# space-editor-test

./: .gitignore  Cargo.toml  README.md
assets/levels/: level01.scn.ron
assets/scenes/: Scene0-rapier.scn.ron  Scene0.scn.ron
src/: editor.rs  level.rs  main.rs  scene.rs
