[package]
name = "space-editor-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13"
bevy-inspector-egui = "0.24"
space_editor = { git = "https://github.com/rewin123/space_editor.git" }

[patch.crates-io]
bevy-inspector-egui = { git = "https://github.com/naomijub/bevy-inspector-egui.git" }

[features]
default = [
    #"editor"
]
editor = []

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
default = []
opt-level = 3
